Fix for long name without whitespace in the customer card.

--- a/src/app/components/presentational/qm-customer-card/qm-customer-card.component.scss
+++ b/src/app/components/presentational/qm-customer-card/qm-customer-card.component.scss
@@ -49,6 +49,8 @@
   &__name {
     display: inline-block;
     color: $primary-color;
+    word-break: break-all;
+    word-break: break-word;
 
     &:hover,
     &:focus {
